--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,4 @@ include AUTHORS
 include COPYING
 include NEWS
 include README
-include release
-include setuplib.py
-recursive-include tests *.py
+recursive-include *.py
